--- a/index.html
+++ b/index.html
@@ -7,7 +7,27 @@
 <script src="./p5.play.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
+<!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-database.js"></script>
 
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+
+<script>
+  // Your web app's Firebase configuration
+  var firebaseConfig = {
+    apiKey: "AIzaSyDfIl8v0e40RrSAEH-VktXmA1cDHsSlY4M",
+    authDomain: "multiplayer-8da95.firebaseapp.com",
+    databaseURL: "https://multiplayer-8da95.firebaseio.com",
+    projectId: "multiplayer-8da95",
+    storageBucket: "multiplayer-8da95.appspot.com",
+    messagingSenderId: "129781587783",
+    appId: "1:129781587783:web:4c98c2eca3d04d7a1d3662"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+</script>
   </head>
   <body>
       <script src="sketch.js"></script>
